src/tests/snapshots/molt__tests__fns__match___async_rule.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (async_rule))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/fns/main.rs":3:1
  │
3 │ fn foo() {}
  │ ^^^^^^^^^^^ $pat

note: Match
  ┌─ "test_data/fns/main.rs":6:1
  │
6 │ async fn foo() {}
  │ ^^^^^^^^^^^^^^^^^ $pat

note: Match
  ┌─ "test_data/fns/main.rs":9:5
  │
9 │     fn foo() {}
  │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":12:5
   │
12 │     async fn foo() {}
   │     ^^^^^^^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":16:5
   │
16 │     fn foo() {}
   │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":19:5
   │
19 │     async fn foo() {}
   │     ^^^^^^^^^^^^^^^^^ $pat
