src/tests/snapshots/molt__tests__fns__match___const_rule.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (const_rule))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/fns/main.rs":3:1
  │
3 │ fn foo() {}
  │ ^^^^^^^^^^^ $pat

note: Match
  ┌─ "test_data/fns/main.rs":7:1
  │
7 │ const fn foo() {}
  │ ^^^^^^^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":10:5
   │
10 │     fn foo() {}
   │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":14:5
   │
14 │     const fn foo() {}
   │     ^^^^^^^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":18:5
   │
18 │     fn foo() {}
   │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":22:5
   │
22 │     const fn foo() {}
   │     ^^^^^^^^^^^^^^^^^ $pat
