src/tests/snapshots/molt__tests__fns__match___fns.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (fns))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/fns/main.rs":3:1
  │
3 │ fn foo() {}
  │ ^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/fns/main.rs":4:1
  │
4 │ unsafe fn foo() {}
  │ ^^^^^^^^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/fns/main.rs":5:1
  │
5 │ async fn foo() {}
  │ ^^^^^^^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/fns/main.rs":8:5
  │
8 │     fn foo() {}
  │     ^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/fns/main.rs":9:5
  │
9 │     unsafe fn foo() {}
  │     ^^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/fns/main.rs":10:5
   │
10 │     async fn foo() {}
   │     ^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/fns/main.rs":14:5
   │
14 │     fn foo() {}
   │     ^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/fns/main.rs":15:5
   │
15 │     unsafe fn foo() {}
   │     ^^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/fns/main.rs":16:5
   │
16 │     async fn foo() {}
   │     ^^^^^^^^^^^^^^^^^ $x
