src/tests/snapshots/molt__tests__fns__match___rule.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (rule))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/fns/main.rs":3:1
  │
3 │ fn foo() {}
  │ ^^^^^^^^^^^ $pat

note: Match
  ┌─ "test_data/fns/main.rs":4:1
  │
4 │ pub fn foo() {}
  │ ^^^^^^^^^^^^^^^ $pat

note: Match
  ┌─ "test_data/fns/main.rs":9:5
  │
9 │     fn foo() {}
  │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":10:5
   │
10 │     pub fn foo() {}
   │     ^^^^^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":16:5
   │
16 │     fn foo() {}
   │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":17:5
   │
17 │     pub fn foo() {}
   │     ^^^^^^^^^^^^^^^ $pat
