src/tests/snapshots/molt__tests__fns__match___unsafe_rule.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (unsafe_rule))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/fns/main.rs":3:1
  │
3 │ fn foo() {}
  │ ^^^^^^^^^^^ $pat

note: Match
  ┌─ "test_data/fns/main.rs":5:1
  │
5 │ unsafe fn foo() {}
  │ ^^^^^^^^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":10:5
   │
10 │     fn foo() {}
   │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":12:5
   │
12 │     unsafe fn foo() {}
   │     ^^^^^^^^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":18:5
   │
18 │     fn foo() {}
   │     ^^^^^^^^^^^ $pat

note: Match
   ┌─ "test_data/fns/main.rs":20:5
   │
20 │     unsafe fn foo() {}
   │     ^^^^^^^^^^^^^^^^^^ $pat
